# zds-what-if-simulator

./: .dockerignore  .env.example  Dockerfile  README-quickstart.md  README.md  docker-compose.release.yml  docker-compose.yml  launch.bat  launch.command  mlflow.db  pyproject.toml
.ai-dev-kit/: .installed-skills  .skills-profile
.cursor/: mcp.json
.github/workflows/: release.yml
tests/: conftest.py  test_databricks_integration.py  test_mlflow_workspace_paths.py
what_if_app/: __init__.py  config.py  databricks_io.py  feature_dictionary.py  main.py  ml_core.py
what_if_app/static/: app.js  index.html  style.css
